--- a/solution.yml
+++ b/solution.yml
@@ -6,6 +6,31 @@ Parameters:
     EnvironmentName:
         Description: An environment name that will be prefixed to resource names
         Type: String
+
+    VpcCIDR: 
+        Description: Please enter the IP range (CIDR notation) for this VPC
+        Type: String
+        Default: 10.0.0.0/16
+
+    PublicSubnet1CIDR:
+        Description: Please enter the IP range (CIDR notation) for the public subnet in the first Availability Zone
+        Type: String
+        Default: 10.0.0.0/24
+
+    PublicSubnet2CIDR:
+        Description: Please enter the IP range (CIDR notation) for the public subnet in the second Availability Zone
+        Type: String
+        Default: 10.0.1.0/24
+
+    PrivateSubnet1CIDR:
+        Description: Please enter the IP range (CIDR notation) for the private subnet in the first Availability Zone
+        Type: String
+        Default: 10.0.2.0/24
+
+    PrivateSubnet2CIDR:
+        Description: Please enter the IP range (CIDR notation) for the private subnet in the second Availability Zone
+        Type: String
+        Default: 10.0.3.0/24
 Resources:
   # instace profile contains the IAM Role name(s) that we want to associate to our auto scaling EC2 Servers
   # never give too much permissions to your EC2 instances! if they get hacked, the permissions get hacked also!
@@ -179,118 +204,111 @@ Resources:
     LBSecGroup:
         Type: AWS::EC2::SecurityGroup
         Properties:
-        GroupDescription: Allow http to our load balancer
-        VpcId:
-            Fn::ImportValue:
-            !Sub "${EnvironmentName}-VPCID"
-        SecurityGroupIngress:
-        - IpProtocol: tcp
-            FromPort: 80
-            ToPort: 80
-            CidrIp: 0.0.0.0/0
-        SecurityGroupEgress:
-        - IpProtocol: tcp
-            FromPort: 80
-            ToPort: 80
-            CidrIp: 0.0.0.0/0
+            GroupDescription: Allow http to our load balancer
+            VpcId: !Ref VPC
+            SecurityGroupIngress:
+            -   IpProtocol: tcp
+                FromPort: 80
+                ToPort: 80
+                CidrIp: 0.0.0.0/0
+            SecurityGroupEgress:
+            -   IpProtocol: tcp
+                FromPort: 80
+                ToPort: 80
+                CidrIp: 0.0.0.0/0
     WebServerSecGroup:
         Type: AWS::EC2::SecurityGroup
         Properties:
-        GroupDescription: Allow http to our hosts and SSH from local only
-        VpcId:
-            Fn::ImportValue:
-            !Sub "${EnvironmentName}-VPCID"
-        SecurityGroupIngress:
-        - IpProtocol: tcp
-            FromPort: 80
-            ToPort: 80
-            CidrIp: 0.0.0.0/0
-        - IpProtocol: tcp
-            FromPort: 22
-            ToPort: 22
-            CidrIp: 0.0.0.0/0
-        SecurityGroupEgress:
-        - IpProtocol: tcp
-            FromPort: 0
-            ToPort: 65535
-            CidrIp: 0.0.0.0/0
+            GroupDescription: Allow http to our hosts and SSH from local only
+            VpcId: !Ref VPC
+            SecurityGroupIngress:
+            -   IpProtocol: tcp
+                FromPort: 80
+                ToPort: 80
+                CidrIp: 0.0.0.0/0
+            -   IpProtocol: tcp
+                FromPort: 22
+                ToPort: 22
+                CidrIp: 0.0.0.0/0
+            SecurityGroupEgress:
+            -   IpProtocol: tcp
+                FromPort: 0
+                ToPort: 65535
+                CidrIp: 0.0.0.0/0
     WebAppLaunchConfig:
         Type: AWS::AutoScaling::LaunchConfiguration
         Properties:
-        UserData:
-            Fn::Base64: !Sub |
-                #!/bin/bash
-                apt-get update -y
-                apt-get install apache2 -y
-                systemctl start apache2.service
-                cd /var/www/html
-                echo "Udacity Demo Web Server Up and Running!" > index.html          
-        # ToDo: AMI ID of Ubuntu Linux machine. Too get one, try creating a VM from the web console. 
-        ImageId: ami-0747bdcabd34c712a
-        SecurityGroups:
-        - Ref: WebServerSecGroup
-        InstanceType: t3.medium
-        BlockDeviceMappings:
-        - DeviceName: "/dev/sdk"
-            Ebs:
-            VolumeSize: '10'
-        IamInstanceProfile: !Ref ProfileWithRolesForOurApp
+            UserData:
+                Fn::Base64: !Sub |
+                    #!/bin/bash
+                    apt-get update -y
+                    apt-get install apache2 -y
+                    systemctl start apache2.service
+                    cd /var/www/html
+                    echo "Udacity Demo Web Server Up and Running!" > index.html          
+            # ToDo: AMI ID of Ubuntu Linux machine. Too get one, try creating a VM from the web console. 
+            ImageId: ami-0747bdcabd34c712a
+            SecurityGroups:
+            - Ref: WebServerSecGroup
+            InstanceType: t3.medium
+            BlockDeviceMappings:
+            -   DeviceName: "/dev/sdk"
+                Ebs:
+                    VolumeSize: '10'
+            IamInstanceProfile: !Ref ProfileWithRolesForOurApp
     WebAppGroup:
         Type: AWS::AutoScaling::AutoScalingGroup
         Properties:
-        VPCZoneIdentifier:
-        - Fn::ImportValue: 
-            !Sub "${EnvironmentName}-PRIV-NETS"
-        LaunchConfigurationName:
-            Ref: WebAppLaunchConfig
-        MinSize: '4'
-        MaxSize: '5'
-        TargetGroupARNs:
-        - Ref: WebAppTargetGroup
+            VPCZoneIdentifier:
+            - !Join [ ",", [ !Ref PrivateSubnet1, !Ref PrivateSubnet2 ]]
+            LaunchConfigurationName:
+                Ref: WebAppLaunchConfig
+            MinSize: '4'
+            MaxSize: '5'
+            TargetGroupARNs:
+            - Ref: WebAppTargetGroup
     WebAppLB:
         Type: AWS::ElasticLoadBalancingV2::LoadBalancer
         Properties:
-        Subnets:
-        - Fn::ImportValue: !Sub "${EnvironmentName}-PUB1-SN"
-        - Fn::ImportValue: !Sub "${EnvironmentName}-PUB2-SN"
-        SecurityGroups:
-        - Ref: LBSecGroup
+            Subnets:
+            - !Ref PublicSubnet1
+            - !Ref PublicSubnet2
+            SecurityGroups:
+            - Ref: LBSecGroup
     Listener:
         Type: AWS::ElasticLoadBalancingV2::Listener
         Properties:
-        DefaultActions:
-        - Type: forward
-            TargetGroupArn:
-            Ref: WebAppTargetGroup
-        LoadBalancerArn:
-            Ref: WebAppLB
-        Port: '80'
-        Protocol: HTTP
+            DefaultActions:
+            -   Type: forward
+                TargetGroupArn:
+                    Ref: WebAppTargetGroup
+            LoadBalancerArn:
+                Ref: WebAppLB
+            Port: '80'
+            Protocol: HTTP
     ALBListenerRule:
         Type: AWS::ElasticLoadBalancingV2::ListenerRule
         Properties:
             Actions:
-            - Type: forward
-            TargetGroupArn: !Ref 'WebAppTargetGroup'
+            -   Type: forward
+                TargetGroupArn: !Ref 'WebAppTargetGroup'
             Conditions:
-            - Field: path-pattern
-            Values: [/]
+            -   Field: path-pattern
+                Values: [/]
             ListenerArn: !Ref 'Listener'
             Priority: 1
     WebAppTargetGroup:
         Type: AWS::ElasticLoadBalancingV2::TargetGroup
         Properties:
-        HealthCheckIntervalSeconds: 10
-        HealthCheckPath: /
-        HealthCheckProtocol: HTTP
-        HealthCheckTimeoutSeconds: 8
-        HealthyThresholdCount: 2
-        Port: 80
-        Protocol: HTTP
-        UnhealthyThresholdCount: 5
-        VpcId: 
-            Fn::ImportValue:
-            Fn::Sub: "${EnvironmentName}-VPCID"
+            HealthCheckIntervalSeconds: 10
+            HealthCheckPath: /
+            HealthCheckProtocol: HTTP
+            HealthCheckTimeoutSeconds: 8
+            HealthyThresholdCount: 2
+            Port: 80
+            Protocol: HTTP
+            UnhealthyThresholdCount: 5
+            VpcId: !Ref VPC
 
 
 Outputs: 
@@ -363,3 +381,17 @@ Outputs:
         Value: !Join [ "", [ 'http://', !Ref WebAppLB ]]
         Export:
           Name: !Sub ${EnvironmentName}-LBURL
+
+# Sample UserData
+# When creating your Launch Configuration, you may need a UserData script
+# here's one that you can use for Ubuntu Linux that will:
+# Install Apache Web Server, Start it, and create an index.html that will be displayed
+# when you visit the IP address of this server with your web browser
+#Here it is:
+#
+#          #!/bin/bash
+#          apt-get update -y
+#          apt-get install apache2 -y
+#          systemctl start apache2.service
+#          cd /var/www/html
+#          echo "Udacity Demo Web Server Up and Running!" > index.html
